<resources>
    <string name="app_name">ShoeStore</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="login_failed">Login failed</string>
    <!-- Strings related to onBoarding -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- Shoe List-->
    <string name="fab_description">Add Shoe to list</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
